# argoflow

./: .gitignore  README.md  config.yaml  pyproject.toml
argoflow/: __init__.py  authorizedContainers.py  sparktemplating.py  tasks.py  utils.py  workflow.py
tests/: test_argoflow.py
